--- a/Python1.ipynb
+++ b/Python1.ipynb
@@ -19,7 +19,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/YSHS-APCSP-2022/Python1/blob/main/Copy_of_Activity1Python1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/YSHS-APCSP-2022/python-1-216250/blob/main/Python1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -37,7 +37,7 @@
         "id": "VKryyOuzvvZe"
       },
       "source": [
-        "Python is a programming language that allows the devleopment of many desktop, web, scientific, and mathematical applications (apps). We will start exploring Python by doing some basic math. "
+        "Python is a programming language that allows the devleopment of many desktop, web, scientific, and mathematical applications (apps). We will start exploring Python by doing some basic math."
       ]
     },
     {
@@ -46,7 +46,7 @@
         "id": "DZcbIj2HwMip"
       },
       "source": [
-        "1. Type in 3 + 5 into a new iPython code cell. Then click the \"play\" icon button on the left of the cell (or control+Enter) to run the code. What is the output? "
+        "1. Type in 3 + 5 into a new iPython code cell. Then click the \"play\" icon button on the left of the cell (or control+Enter) to run the code. What is the output?"
       ]
     },
     {
@@ -64,13 +64,13 @@
         "id": "qVr5Nry_w8gv"
       },
       "source": [
-        "2. Type in \n",
+        "2. Type in\n",
         "\n",
         "```\n",
         "2**3\n",
         "```\n",
-        "  into a new iPython code cell. Then click the \"play\" icon button on the left \n",
-        "  of the cell (or control+Enter) to run the code. What is the output? What \n",
+        "  into a new iPython code cell. Then click the \"play\" icon button on the left\n",
+        "  of the cell (or control+Enter) to run the code. What is the output? What\n",
         "  mathematical operation does the double asterisk signify?"
       ]
     },
@@ -89,11 +89,11 @@
         "id": "jRrhQuZaxCJ4"
       },
       "source": [
-        "3. Type in \n",
+        "3. Type in\n",
         "```\n",
         "5*4\n",
         "```\n",
-        "into a new iPython code cell. Then click the \"play\" icon button on the left of the cell (or control+Enter) to run the code. What is the output? What mathematical operation does the single asterisk represent? "
+        "into a new iPython code cell. Then click the \"play\" icon button on the left of the cell (or control+Enter) to run the code. What is the output? What mathematical operation does the single asterisk represent?"
       ]
     },
     {
@@ -203,7 +203,7 @@
         "id": "pW8_oQiyywHY"
       },
       "source": [
-        "Let's say that you want to have something print out even if the number is less than zero. We can add an else statement to the condition to facilitate this : "
+        "Let's say that you want to have something print out even if the number is less than zero. We can add an else statement to the condition to facilitate this :"
       ]
     },
     {
@@ -221,8 +221,8 @@
         "\n",
         "if n*2 > 1:\n",
         "  print(\"wow\")\n",
-        "else:\n",
-        "\n",
+        "else: hi\n",
+        "khjkkj\n",
         "  print(\"umm...no\")"
       ],
       "execution_count": null,
@@ -247,7 +247,7 @@
         "\n",
         "2. Write a conditional statement evaluating whether two variables (x and y) are both greater than zero. Have a printout statement for a true and a false evaluation.\n",
         "\n",
-        "3. Create a conditional statement of your choice. Must include if...else statement, print statement, and a mathematical operation. "
+        "3. Create a conditional statement of your choice. Must include if...else statement, print statement, and a mathematical operation."
       ]
     }
   ]
